# loom-lsp

./: .envrc  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
crates/loom/: Cargo.toml
crates/loom-config/: Cargo.toml
crates/loom-config/src/: lib.rs
crates/loom-delegate/: Cargo.toml
crates/loom-delegate/src/: delegate.rs  lib.rs  transport.rs
crates/loom-parse/: Cargo.toml
crates/loom-parse/src/: lib.rs
crates/loom-parse/src/snapshots/: loom_parse__test__integration_realistic_qmd.snap  loom_parse__test__parse_qmd.snap
crates/loom-vdoc/: Cargo.toml
crates/loom-vdoc/src/: lib.rs
crates/loom-vdoc/src/snapshots/: loom_vdoc__test__creating_virtual_documents.snap
crates/loom/src/: main.rs  registry.rs
crates/loom/src/server/: code_action.rs  completion.rs  definition.rs  did_change.rs  did_close.rs  did_open.rs  did_save.rs  forward.rs  hover.rs  initialize.rs  mod.rs  range_formatting.rs  rename.rs  signature_help.rs  spawn_delegate.rs  workspace_edit.rs
tests/fixtures/: full_config.toml  mixed_languages.qmd  plain_fence.qmd  python_r.qmd  single_python.qmd  two_python_chunks.qmd
