[package]
name = "loom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "7.0.0-rc2"
loom-config = { path = "../loom-config" }
loom-delegate = { path = "../loom-delegate" }
loom-parse = { path = "../loom-parse" }
loom-vdoc = { path = "../loom-vdoc" }
tokio = { version = "1.50", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures = "0.3.32"
