[package]
name = "loom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
dashmap = "7.0.0-rc2"
futures = "0.3.32"
loom-config = { path = "../loom-config" }
loom-delegate = { path = "../loom-delegate" }
loom-parse = { path = "../loom-parse" }
loom-vdoc = { path = "../loom-vdoc" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
