[package]
name = "loom-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.0", default-features = false, features = [
  "derive",
  "std"
] }
dashmap = "7.0.0-rc2"
loom-config = { path = "../loom-config" }
loom-delegate = { path = "../loom-delegate" }
loom-parse = { path = "../loom-parse" }
loom-vdoc = { path = "../loom-vdoc" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
